# cadnc

./: .clang-tidy  .gitignore  CADNC.code-workspace  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.ai/: CATALOG_CAM.md  CATALOG_PARTDESIGN.md  CATALOG_SKETCHER.md  ENGINEERING_LOG.md  FREECAD_ADOPTION_PLAN.md  NEXT_SESSION_PROMPT.md  REFERENCE_SOURCES.md  START_HERE.md  WORKPLAN.md  WORKPLAN_NEXT.md  WRAPPER_CONTRACT.md  context.yaml
.claude/: settings.json
.github/workflows/: build.yml
adapter/inc/: CadDocument.h  CadEngine.h  CadSession.h  PartFacade.h  SketchFacade.h
adapter/src/: CadDocument.cpp  CadEngine.cpp  CadSession.cpp  PartFacade.cpp  SketchFacade.cpp
app/: AppVersion.h.in  main.cpp
cam/src/: AdaptiveOperation.cpp  CodesysPostProcessor.cpp  HelixOperation.cpp  PostProcessor.cpp
cmake/: BumpBuildNumber.cmake
docs/superpowers/plans/: 2026-04-17-sketch-backend-completion.md
freecad/: CMakeLists.txt
freecad/Mod/PartDesign/App/: BodyPy.cpp  BodyPy.h  CMakeLists.txt  FeaturePy.cpp  FeaturePy.h
freecad/Mod/Sketcher/App/: CMakeLists.txt  ConstraintPy.cpp  ConstraintPy.h  ExternalGeometryExtensionPy.cpp  ExternalGeometryExtensionPy.h  ExternalGeometryFacadePy.cpp  ExternalGeometryFacadePy.h  GeometryFacadePy.cpp  GeometryFacadePy.h  SketchGeometryExtensionPy.cpp  SketchGeometryExtensionPy.h  SketchObject.cpp  SketchObjectPy.cpp  SketchObjectPy.h  SketchObjectSFPy.cpp  SketchObjectSFPy.h  SketchPy.cpp  SketchPy.h
nesting/inc/: BottomLeftFillNester.h  BoundingBoxNester.h  NestJob.h  NestTypes.h  NestingEngine.h  ProfileImporter.h
nesting/src/: BottomLeftFillNester.cpp  BoundingBoxNester.cpp  NestJob.cpp  NestingEngine.cpp  ProfileImporter.cpp
resources/: shortcuts.json
resources/icons/: NOTICE.md
tests/: poc_freecad_test.cpp  smoke_adapter_contract.cpp  test_adapter.cpp  test_part_flow.cpp
tests/parity_suite/: CMakeLists.txt
tests/parity_suite/common/: test_helpers.h
tests/parity_suite/sketch/: CMakeLists.txt  main.cpp  test_drawing_arc.cpp  test_drawing_arc3point.cpp  test_drawing_arc_ellipse.cpp  test_drawing_arc_hyperbola.cpp  test_drawing_arc_parabola.cpp  test_drawing_circle.cpp  test_drawing_circle3point.cpp  test_drawing_ellipse.cpp  test_drawing_ellipse3point.cpp  test_drawing_line.cpp  test_drawing_point.cpp  test_drawing_polyline.cpp  test_drawing_rectangle.cpp
ui/qml/: Main.qml  SketchCanvas.qml  Theme.qml  translation.js
ui/qml/components/: AxisIndicator.qml  CadToolButton.qml  NavCube.qml  RibbonGroup.qml  StatusToggle.qml
ui/qml/dialogs/cam/: .gitkeep
ui/qml/dialogs/constraints/: .gitkeep
ui/qml/dialogs/drawing/: .gitkeep
ui/qml/dialogs/features/: .gitkeep
ui/qml/panels/: ConstraintPanel.qml  DatumPlanePanel.qml  FeatureEditPanel.qml  ModelTreePanel.qml  PropertiesPanel.qml
ui/qml/popups/: BooleanDialog.qml  DimensionInput.qml  DressUpDialog.qml  FeatureDialog.qml  PrimitiveDialog.qml
ui/qml/toolbars/: CAMToolbar.qml  NestingToolbar.qml  PartToolbar.qml  SketchToolbar.qml
viewport/inc/: OccRenderer.h  OccViewport.h
viewport/src/: OccRenderer.cpp  OccViewport.cpp
